# LyMonS

./: .gitignore  ARCHITECTURAL_IMPROVEMENTS.md  BUILD_REPORT.md  CROSS_COMPILE.md  Cargo.toml  EASTER_EGGS_MIGRATION.md  EMULATION_TESTING.md  EMULATOR.md  EMULATOR_IMPLEMENTATION.md  MIGRATION.md  Makefile  PHASE2_SSD1306_PLUGIN.md  PHASE3_COMPLETE_SUMMARY.md  PHASE6_OPTIMIZATION.md  PHASE7_TESTING_DOCUMENTATION.md  README.md  REFACTORING_STATE.md  TEST_BUILD_SUMMARY.md  WEATHER_LAYOUT_UPDATE.md  WEATHER_PRODUCTION_READY.md  WEATHER_REFACTORING_COMPLETE.md  WEATHER_TEST_SUMMARY.md  build.rs  config.yaml  configw.yaml  dumpster.rs  fetch_push_git  lymonr.yaml  lymons-0.2.4-pcp-armv7.tgz  lymons.yaml  test_ssd1309.yaml  test_weather_emulator.sh  testme  testmew
.github/workflows/: release-pi.yml
aarch64/: lymons-0.2.6-pcp-aarch64.tgz  lymons-0.3.0-pcp-aarch64.tgz  lymons-0.3.1-pcp-aarch64.tgz  lymons-0.3.3-pcp-aarch64.tgz  lymons-0.3.4-pcp-aarch64.tgz
armv7/: lymons-0.2.5-pcp-armv7.tgz  lymons-0.2.6-pcp-armv7.tgz  lymons-0.3.1-pcp-armv7.tgz  lymons-0.3.4-pcp-armv7.tgz
artifacts/aarch64/: lymons-0.2.5-pcp-aarch64.tgz  lymons-0.2.7-pcp-aarch64.tgz  lymons-0.2.8-pcp-aarch64.tgz  lymons-0.3.2-pcp-aarch64.tgz
artifacts/armv7/: lymons-0.2.7-pcp-armv7.tgz  lymons-0.2.8-pcp-armv7.tgz  lymons-0.3.0-pcp-armv7.tgz  lymons-0.3.2-pcp-armv7.tgz  lymons-0.3.3-pcp-armv7.tgz
assets/: layout.yaml
assets/sharp400/: README.md
assets/ssd1322/: layout.yaml
assets/st7789/: layout.yaml
assets/st7796s/: layout.yaml
drivers/lymons-driver-sh1106/: Cargo.toml
drivers/lymons-driver-sh1106/src/: lib.rs  plugin.rs
drivers/lymons-driver-ssd1306/: Cargo.toml  README.md
drivers/lymons-driver-ssd1306/src/: ffi.rs  lib.rs  plugin.rs
drivers/lymons-driver-ssd1309/: Cargo.toml
drivers/lymons-driver-ssd1309/src/: lib.rs  plugin.rs
drivers/lymons-driver-ssd1322/: Cargo.toml
drivers/lymons-driver-ssd1322/src/: ffi.rs  lib.rs  plugin.rs
examples/: ssd1306_basic.rs  ssd1322_grayscale.rs
fontgen/: genfonts  main.py  pyproject.toml
latest/: lymons-latest-pcp-aarch64.tgz  lymons-latest-pcp-armv7.tgz
safe_src/: constants.rs  display.rs  httprpc.rs  imgdata.rs  main.rs  sliminfo.rs
scripts/: create-pcp-package.sh  create-pi-package.sh  cross-compile-pi.sh
src/: astral.rs  beacon.rs  climacell.rs  clock_font.rs  clock_font_svg.rs  config.rs  const_oled.rs  constants.rs  coverart.rs  dbfs.rs  deutils.rs  display.rs  display_old.rs  draw.rs  drawsvg.rs  eggs.rs  func_timer.rs  geoloc.rs  glyphs.rs  histogram.rs  httprpc.rs  imgdata.rs  lib.rs  localization.rs  location.rs  lymonr_logo.rs  mac_addr.rs  main.rs  metrics.rs  pacer.rs  params.rs  shm_path.rs  singles.rs  sliminfo.rs  spectrum.rs  sse_client.rs  sun.rs  svgimage.rs  textable.rs  translate.rs  (+13 more)
src/display/: color.rs  color_proxy.rs  emulator_controller.rs  emulator_window.rs  error.rs  factory.rs  field.rs  framebuffer.rs  layout.rs  layout_expr.rs  layout_manager.rs  layout_resolver.rs  layout_template.rs  manager.rs  mod.rs  mode_controller.rs  page.rs  traits.rs  ttf_font.rs
src/display/components/: clock.rs  easter_eggs.rs  mod.rs  scrollers.rs  status_bar.rs  visualizer.rs  weather.rs
src/display/drivers/: emulator.rs  mock.rs  mod.rs  sh1106.rs  sh1122.rs  sharp_memory.rs  ssd1306.rs  ssd1309.rs  ssd1322.rs  st7789.rs  st7796s.rs
src/display/plugin/: adapter.rs  ffi.rs  loader.rs  mod.rs
tests/: display_integration.rs
