[package]
name = "LyMonS"
version = "0.2.4"
edition = "2024"

[workspace]
members = [
    ".",
    "drivers/lymons-driver-ssd1306",
    "drivers/lymons-driver-ssd1309",
    "drivers/lymons-driver-sh1106",
    "drivers/lymons-driver-ssd1322",
]

[build-dependencies]
chrono = "0.4.41"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.39", features = ["derive"] }
display-interface = "0.5.0"
embedded-graphics = "0.8.1"
embedded-graphics-framebuf = "0.5.0"
embedded-text = "0.7.2"
embedded-hal = "1.0.0"
linux-embedded-hal = "0.4.0"
env = "1.0.1"
env_logger = "0.11.8"
log = "0.4.27"
reqwest = { version = "0.12.23", features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9"
dirs-next = "2.0"
ssd1306 = { version = "0.10.0", optional = true }
ssd1309 = { version = "0.4.0", optional = true }
ssd1322 = { version = "0.3.0", optional = true }
sh1106 = { version = "0.5.0", optional = true }
thiserror = "2.0.12"
anyhow = "1.0.98"
translators = { version = "0.1.5", features = ["google", "tokio-async"] }
tokio = { version = "1.47.1", features = ["full","rt-multi-thread"] }
mini-moka = "0.10.3"
async-compression = { version = "0.4.25", features = ["gzip", "futures-io"] }
flate2 = "1.1.2"
rand = "0.9.2"
mac_address = "1.1.8"
arrayvec = "0.7.6"  # For stack-allocated strings in hot paths

# Plugin system for dynamic driver loading
libloading = { version = "0.8", optional = true }

# Display Emulator (optional for desktop testing)
pixels = { version = "0.13", optional = true }
winit = { version = "0.28", optional = true }
winit_input_helper = { version = "0.14", optional = true }

# SVG Rendering (optimized features)
tiny-skia = { version = "0.11.4", default-features = false, features = ["std"] } # Explicitly control tiny-skia features
resvg = { version = "0.45.1" }
usvg = { version = "0.45.1" }

# Real hardware dependency (only compiled if `emulated-hardware` feature is OFF)
rppal = { version = "0.14", optional = true }
# Emulated hardware dependency (only compiled if `emulated-hardware` feature is ON)
# rpi-hal-emulated = { path = "../rpi-hal-emulated", optional = true }  # Disabled - path not available
libc = "0.2.174"
rustfft = "6.4.0"
local-ip-address = "0.6.5"
memmap2 = "0.9.8"

[profile.release]
opt-level = "s"       # "z" we prioritize size over speed, "s" is balanced
lto = true            # enable link-time optimization
codegen-units = 1     # fewer parallel codegen units, better optimization
panic = "abort"       # strip panic backtrace machinery
#strip = "symbols"     # requires Rust 1.70+, automatically strips symbols
strip = "debuginfo"   # requires Rust 1.70+, automatically strips symbols
#strip = "metadata"    # requires Rust 1.70+, automatically strips symbols

[features]
# Default: All drivers + plugin system (hybrid mode)
default = ["all-drivers", "plugin-system"]

# Individual driver features
driver-ssd1306 = ["dep:ssd1306"]
driver-ssd1309 = ["dep:ssd1309"]
driver-ssd1322 = ["dep:ssd1322"]
driver-sh1106 = ["dep:sh1106"]

# Convenience features
all-drivers = ["driver-ssd1306", "driver-ssd1309", "driver-ssd1322", "driver-sh1106"]

# Plugin system for dynamic driver loading
plugin-system = ["dep:libloading"]

# Plugin-only mode (minimal binary, requires plugins)
plugin-only = ["plugin-system"]

# Minimal embedded build (use with --no-default-features)
embedded = ["driver-ssd1306"]
embedded-ssd1322 = ["driver-ssd1322"]
embedded-sh1106 = ["driver-sh1106"]

# Display emulator for desktop testing
emulator = ["dep:pixels", "dep:winit", "dep:winit_input_helper"]

# For development/migration - allows both old and new display systems to coexist
new-display-system = []
